<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/placeholder_text"
            android:textStyle="bold"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/tvDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/placeholder_text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgPcResult"
                android:layout_width="0dp"
                android:layout_height="64dp"
                android:layout_weight="1"
                android:background="@android:color/holo_blue_light"
                android:contentDescription="@string/pc_result_img"
                android:src="@drawable/rock" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="64dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/vs"
                android:textColor="@android:color/holo_blue_light"
                android:textSize="36sp" />

            <ImageView
                android:id="@+id/imgYouResult"
                android:layout_width="0dp"
                android:layout_height="64dp"
                android:layout_weight="1"
                android:background="@android:color/holo_blue_light"
                android:contentDescription="@string/you_result_img"
                android:src="@drawable/rock" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/computer" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/you" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginVertical="8dp"
            android:background="@android:color/holo_blue_light"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>